# goat

./: .gitignore  README.md  build.cmd  build.sh  clean.sh  create_test.cmd  create_test.sh  program.goat  release.sh  test.py  test_all.cmd  test_all.sh  test_lib.goat  web.goat
ext/: main.c  (+1 more)
src/: CMakeLists.txt  Doxyfile  goat_data.h  main.cpp  settings.h
src/code/: CMakeLists.txt  _try.cpp  add.cpp  add.h  and.cpp  and.h  array.cpp  array.h  bitand.cpp  bitand.h  bitor.cpp  bitor.h  bool.cpp  bool.h  break.cpp  break.h  call.cpp  call.h  catch.cpp  catch.h  char.cpp  char.h  clone.cpp  clone.h  code.cpp  code.h  cont.cpp  cont.h  create.cpp  create.h  cycle.cpp  cycle.h  debug.cpp  debug.h  dec.cpp  dec.h  decl_var.cpp  decl_var.h  deserializer.cpp  deserializer.h  (+183 more)
src/compiler/: CMakeLists.txt
src/global/: CMakeLists.txt  global.cpp  global.h
src/launcher/: CMakeLists.txt  launcher.cpp  launcher.h  options.cpp  options.h
src/lib/: CMakeLists.txt  assert.h  buffer.h  char_encoder.h  dbg_print.h  dll_loader.cpp  dll_loader.h  exception.cpp  exception.h  fast_allocator.cpp  fast_allocator.h  functional.h  gc.h  gpio.cpp  gpio.h  light_vector.h  new.cpp  new.h  pointer.h  ref_counter.cpp  ref_counter.h  rle.cpp  rle.h  spinlock.h  utf8_encoder.cpp  utf8_encoder.h  utils.cpp  utils.h
src/model/: CMakeLists.txt  context.cpp  context.h  executor.h  generic_handler.cpp  generic_object.cpp  generic_proto.cpp  handler.cpp  name_cache.cpp  name_cache.h  object.cpp  object.h  object_array.cpp  object_array.h  object_array_like.cpp  object_array_like.h  object_boolean.cpp  object_boolean.h  object_byte_array.cpp  object_byte_array.h  object_cache.cpp  object_cache.h  object_char.cpp  object_char.h  object_dynamic_library.cpp  object_dynamic_library.h  object_exception.cpp  object_exception.h  object_file.cpp  object_file.h  object_function.cpp  object_function.h  object_function_built_in.cpp  object_function_built_in.h  object_function_dll.cpp  object_function_dll.h  object_function_user_defined.cpp  (+47 more)
(+2124 files in other folders)
